sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: not found: value ok
  while (ok){
         ^AlgBubbleSort1:6: error: not found: value ok
    ok=false
    ^AlgBubbleSort1:10: error: not found: value ok
        ok = true
        ^AlgBubbleSort1:11: error: not found: value ok
    println(ok)
            ^