sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var c:Boolean = true
  var n:Int = getNombreValeurs()-1
  while (ok){
    ok=false
    for (i<- 1 to n){
      if (!plusPetit(i,i+1)){
        echange(i,i+1)
        ok = true
    println(ok)
      }
    }
  }
}